--- a/public/loaners/views/view-loaner.client.view.html
+++ b/public/loaners/views/view-loaner.client.view.html
@@ -1,16 +1,14 @@
-<!-- The loaner view -->
 <section data-ng-controller="LoanersController" data-ng-init="findOne()">
-    <h1 data-ng-bind="loaner.loaner"></h1>
-    <!-- Show the editing buttons to the loaner creator -->
-    <div data-ng-show="authentication.user._id == loaner.creator._id">
-        <a href="/#!/loaners/{{loaner._id}}/edit">edit</a>
-        <a href="#" data-ng-click="delete();">delete</a>
-    </div>
-    <small>
-        <em>Posted on</em>
-        <em data-ng-bind="loaner.created | date:'mediumDate'"></em>
-        <em>by</em>
-        <em data-ng-bind="loaner.creator.fullName"></em>
-    </small>
-    <p data-ng-bind="loaner.content"></p>
+  <h1 data-ng-bind="loaner.model"></h1>
+  <div data-ng-show="authentication.user._id == loaner.creator._id">
+    <a href="/#!/loaners/{{loaner._id}}/edit">edit</a>
+    <a href="#" data-ng-click="delete();">delete</a>
+  </div>
+  <small>
+    <em>Posted on</em>
+    <em data-ng-bind="loaner.created | date:'mediumDate'"></em>
+    <em>by</em>
+    <em data-ng-bind="loaner.creator.fullName"></em>
+  </small>
+  <p data-ng-bind="loaner.modelType"></p>
 </section>
