--- a/public/loaners/views/create-loaner.client.view.html
+++ b/public/loaners/views/create-loaner.client.view.html
@@ -1,4 +1,5 @@
 <section data-ng-controller="LoanersController">
+  <a href="/#!/">Home</a>
 <h1>New Loaner</h1>
   <form data-ng-submit="create()" novalidate>
     <div>
