--- a/public/loaners/views/list-loaners.client.view.html
+++ b/public/loaners/views/list-loaners.client.view.html
@@ -1,15 +1,22 @@
 <section data-ng-controller="LoanersController" data-ng-init="find()">
-  <h1>Loaners</h1>
+  <a href="/#!/">Home</a>
+  <a href="/#!/loaners/create">Create Loaner</a>
+  <h1>Issued Equipment</h1>
+  <br>
   <ul>
     <li data-ng-repeat="loaner in loaners">
       <a data-ng-href="#!/loaners/{{loaner._id}}" data-ng-bind="loaner.model"></a>
-      <br>
-      <small data-ng-bind="loaner.created | date:'medium'"></small>
-      <small>/</small>
+      <small> - </small>
+      <small data-ng-bind="loaner.modelType"></small>
+      <br><br>
+      <div>Issued to </div>
       <small data-ng-bind="loaner.creator.fullName"></small>
-      <p data-ng-bind="loaner.modelType"></p>
+      <small> on </small>
+      <small data-ng-bind="loaner.created | date:'medium'"></small>
+      <br><br><br>
     </li>
   </ul>
+  
  <div data-ng-hide="!loaners || loaners.length">
     No loaners yet, why don't you <a href="/#!/loaners/create">create one</a>?
   </div>
