--- a/app/views/signup.ejs
+++ b/app/views/signup.ejs
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html xmlns:ng="http://angularjs.org">
 <html>
 <head>
 	<!-- Use the 'title' property to render a page title  -->
@@ -38,8 +39,8 @@
 	</form>
 
 	<!-- Render the OAuth authentication links  -->
-	<a href="/oauth/facebook">Sign in with Facebook</a>
-	<a href="/oauth/twitter">Sign in with Twitter</a>
-	<a href="/oauth/google">Sign in with Google</a>
+	<a href="/oauth/facebook" class="btn btn-info" role="button">Sign in with Facebook</a>
+	<a href="/oauth/twitter" class="btn btn-info" role="button">Sign in with Twitter</a>
+	<a href="/oauth/google" class="btn btn-info" role="button">Sign in with Google</a>
 </body>
 </html>
