--- a/public/loaners/views/create-loaner.client.view.html
+++ b/public/loaners/views/create-loaner.client.view.html
@@ -16,7 +16,7 @@
       </div>
     </div>
     <div><br>
-      <input type="submit">
+      <input type="submit" class="btn btn-info" role="button">
     </div>
     <div data-ng-show="error">
       <strong data-ng-bind="error"></strong>
