--- a/app/views/adminssignup.ejs
+++ b/app/views/adminssignup.ejs
@@ -19,10 +19,10 @@
   		<div class="modal-dialog">
 		<div class="modal-content">
       		<div class="modal-header">
-        		<h1 class="text-center" >Register</h1>
+        		<h1 class="text-center" >Admin Register</h1>
     		</div>
       		<div class="modal-body">
-				<form action="/signup" method="post" class="form col-md-12 center-block">
+				<form action="/adminssignup" method="post" class="form col-md-12 center-block">
 					<div class="form-group">
 							<input type="text" class="form-control input-lg" name="firstName" placeholder="First Name"/>
 						</div>
@@ -33,10 +33,10 @@
 							<input type="text" name="email" class="form-control input-lg" placeholder="Email"/>
 						</div>
 						<div class="form-group">
-							<input type="text" name="username" class="form-control input-lg" placeholder="Username"/>
+							<input type="text" name="adminname" class="form-control input-lg" placeholder="Adminname"/>
 						</div>
 						<div class="form-group">	
-							<input type="password" name="password" class="form-control input-lg" placeholder="Password"/>
+							<input type="password" name="adminpassword" class="form-control input-lg" placeholder="Admin Password"/>
 						</div>
 						<div class="form-group">
 							<input type="submit" class="btn btn-primary btn-lg btn-block" value="Sign up" />
