--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -40,6 +40,9 @@
     <!-- Load the users module -->
     <script type="text/javascript" src="/public/users/users.client.module.js"></script>
     <script type="text/javascript" src="/public/users/services/authentication.client.service.js"></script>
+    
+    <script type="text/javascript" src="/public/admins/admins.client.module.js"></script>
+    <script type="text/javascript" src="/public/admins/services/admins.authentication.client.service.js"></script>
 
     <!-- Bootstrap AngularJS application -->
     <script type="text/javascript" src="/public/application.js"></script>
