fixed the details page

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -4,8 +4,8 @@
 	<!-- Use the 'title' property to render a page title  -->
 	<title><%= title %></title>
 </head>
-<body>
-	<div class="jumbotron text-center">
+<body style="background-color: #e6e6e6">
+	<div style="background-color: #668cff" class="jumbotron text-center">
 	<H1>Equipment Check-Out</H1>
 	</div>
 	
