--- a/public/loaners/views/edit-loaner.client.view.html
+++ b/public/loaners/views/edit-loaner.client.view.html
@@ -15,9 +15,9 @@
       </div>
     </div>
     <div><br>
-      <input type="submit" class="btn btn-info" value="Update">
+      <input type="submit" class="btn btn-primary btn-lg" value="Update">
     </div><br>
-    <a href="#!/loaners/{{loaner._id}}" class="btn btn-info" role="button">Back</a>
+    <a href="#!/loaners/{{loaner._id}}" class="btn btn-primary btn-lg" role="button">Back</a>
     <div data-ng-show="error">
       <strong data-ng-bind="error"></strong>
     </div>
