--- a/app/views/signin.ejs
+++ b/app/views/signin.ejs
@@ -5,7 +5,7 @@
 	<!-- Use the 'title' property to render a page title  -->
 	<title><%= title %></title>
 </head>
-<body>
+<body style="background-color: #668cff">
   	<!-- Display flash messages  -->
 	<% for(var i in messages) { %>
 	   <div class="flash"><%= messages[i] %></div>
@@ -33,7 +33,7 @@
 						<input type="submit" class="btn btn-primary btn-lg btn-block" value="Sign In" />
 					</div>
 					<div class="text-center">
-						<a href="/#!/" class="btn btn-info" role="button">Cancel</a>
+						<a href="/#!/" class="btn btn-info btn-md" role="button">Cancel</a>
 					</div>
 				</form>
 			</div>
