--- a/app/views/signup.ejs
+++ b/app/views/signup.ejs
@@ -5,7 +5,7 @@
 	<!-- Use the 'title' property to render a page title  -->
 	<title><%= title %></title>
 </head>
-<body>
+<body style="background-color: #668cff">
   	<!-- Display flash messages  -->
 	<% for(var i in messages) { %>
 	   <div class="flash"><%= messages[i] %></div>
@@ -23,7 +23,7 @@
     		</div>
       		<div class="modal-body">
 				<form action="/signup" method="post" class="form col-md-12 center-block">
-					<div class="form-group">
+						<div class="form-group">
 							<input type="text" class="form-control input-lg" name="firstName" placeholder="First Name"/>
 						</div>
 						<div class="form-group">
@@ -42,7 +42,7 @@
 							<input type="submit" class="btn btn-primary btn-lg btn-block" value="Sign up" />
 						</div>
 						<div class="text-center">
-							<a href="/#!/" class="btn btn-info" role="button">Cancel</a>
+							<a href="/#!/" class="btn btn-info btn-md" role="button">Cancel</a>
 						</div>
 					</form>
 				</div>
