--- a/public/example/views/example.client.view.html
+++ b/public/example/views/example.client.view.html
@@ -1,8 +1,8 @@
 <section ng-controller="ExampleController">
   <div class="text-center">
   <div data-ng-show="!authentication.user">
-    <a href="/signup" class="btn btn-info" role="button">Register</a>
-    <a href="/signin" class="btn btn-info" role="button">Signin</a>
+    <a href="/signup" class="btn btn-primary btn-lg" role="button">Register</a>
+    <a href="/signin" class="btn btn-primary btn-lg" role="button">Signin</a>
   </div><br>
   
   <!--
@@ -15,8 +15,8 @@
   <div data-ng-show="authentication.user">
     <h1>Hello <span data-ng-bind="authentication.user.fullName"></span></h1>
     <br>
-    <a href="/#!/loaners" class="btn btn-info" role="button">Checked-Out List</a>
-    <a href="/#!/loaners/create" class="btn btn-info" role="button">Check-Out Item</a>
+    <a href="/#!/loaners" class="btn btn-primary btn-lg" role="button">Checked-Out List</a>
+    <a href="/#!/loaners/create" class="btn btn-primary btn-lg" role="button">Check-Out Item</a>
     <br><br><br><br><br>
     <a href="/signout" class="btn btn-info" role="button">Signout</a>
   </div>
