--- a/public/loaners/views/create-loaner.client.view.html
+++ b/public/loaners/views/create-loaner.client.view.html
@@ -1,26 +1,36 @@
 <section data-ng-controller="LoanersController">
   <div class="text-center">
-  <a href="/#!/" class="btn btn-info" role="button">Home</a>
-<h1>New Check-Out</h1>
-  <form data-ng-submit="create()" novalidate>
-    <div>
-      <label for="model">Model</label>
-      <div>
-        <input type="text" data-ng-model="model" id="model" placeholder="Model" required>
-      </div>
-    </div>
-    <div><br>
-      <label for="modelType">Model Type</label>
-      <div>
-        <input type ="text" data-ng-model="modelType" id="modelType" placeholder="Model Type" required>
-      </div>
-    </div>
-    <div><br>
-      <input type="submit" class="btn btn-info" role="button">
-    </div>
-    <div data-ng-show="error">
-      <strong data-ng-bind="error"></strong>
-    </div>
-  </form>
-  </div>
+  <a href="/#!/" class="btn btn-primary btn-lg" role="button">Home</a>
+  
+  <div id="loginModal" class="modal show" tabindex="-1" role="dialog" aria-hidden="true">
+  		<div class="modal-dialog">
+		<div class="modal-content">
+      		<div class="modal-header">
+        		<h1 class="text-center" >Check-Out New Item</h1>
+    		</div>
+      		<div class="modal-body">
+            <form data-ng-submit="create()" novalidate class="form col-md-12 center-block">
+                <div class="form-group">
+                  <input type="text" class="form-control input-lg" data-ng-model="model" id="model" placeholder="Model" required>
+                </div>
+                <div class="form-group">
+                  <input type ="text" class="form-control input-lg" data-ng-model="modelType" id="modelType" placeholder="Model Type" required>
+                </div>
+                <div class="form-group">
+                  <input type="submit" class="btn btn-primary btn-lg btn-block" role="button">
+                </div>
+                <div class="text-center">
+          							<a href="/#!/" class="btn btn-info btn-md" role="button">Cancel</a>
+                <div data-ng-show="error">
+                  <strong data-ng-bind="error"></strong>
+                </div>
+            </form>
+            </div>
+            <div class="modal-footer">
+			        	<div class="col-md-12">
+					</div>	
+		     	</div>
+    	</div>
+  		</div>
+	</div>
 </section>
