added more bootstrap

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -3,8 +3,17 @@
 <head>
 	<!-- Use the 'title' property to render a page title  -->
 	<title><%= title %></title>
+	<style>
+	#loginModal2 {
+		top: 175px;
+		outline: none;
+	}
+	</style>
 </head>
 <body style="background-color: #e6e6e6">
+	
+	<link rel="stylesheet" href="/public/lib/bootstrap/dist/css/bootstrap.min.css">
+	
 	<div style="background-color: #668cff" class="jumbotron text-center">
 	<H1>Equipment Check-Out</H1>
 	</div>
@@ -18,7 +27,7 @@
 	</script>
 	
 
-    <link rel="stylesheet" href="/public/lib/bootstrap/dist/css/bootstrap.min.css">
+    
 
     <!-- Load local libraries -->
 	<script type="text/javascript" src="/public/lib/angular/angular.js"></script>
