--- a/public/loaners/views/create-loaner.client.view.html
+++ b/public/loaners/views/create-loaner.client.view.html
@@ -1,13 +1,11 @@
 <section data-ng-controller="LoanersController">
   <div class="text-center">
-  <a href="/#!/" class="btn btn-primary btn-lg" role="button">Home</a>
-  
-  <div id="loginModal" class="modal show" tabindex="-1" role="dialog" aria-hidden="true">
+  <div id="loginModal2" class="modal show" tabindex="-1" role="dialog" aria-hidden="true">
   		<div class="modal-dialog">
-		<div class="modal-content">
+		  <div class="modal-content">
       		<div class="modal-header">
         		<h1 class="text-center" >Check-Out New Item</h1>
-    		</div>
+    		  </div>
       		<div class="modal-body">
             <form data-ng-submit="create()" novalidate class="form col-md-12 center-block">
                 <div class="form-group">
