--- a/public/loaners/views/create-loaner.client.view.html
+++ b/public/loaners/views/create-loaner.client.view.html
@@ -3,7 +3,7 @@
   <div id="loginModal2" class="modal show" tabindex="-1" role="dialog" aria-hidden="true">
   		<div class="modal-dialog">
 		  <div class="modal-content">
-      		<div class="modal-header">
+      		<div class="modal-header bg-primary">
         		<h1 class="text-center" >Check-Out New Item</h1>
     		  </div>
       		<div class="modal-body">
