--- a/app/views/adminssignin.ejs
+++ b/app/views/adminssignin.ejs
@@ -30,9 +30,11 @@
 						<input type="password" class="form-control input-lg" name="adminpassword" placeholder="Admin Password"/>
 					</div>
 					<div class="form-group">
+						<!-- This activates the sign in -->
 						<input type="submit" class="btn btn-primary btn-lg btn-block" value="Sign In" />
 					</div>
 					<div class="text-center">
+						<!-- This cancels the sign in and returns to the home page-->
 						<a href="/#!/" class="btn btn-info" role="button">Cancel</a>
 					</div>
 				</form>
