--- a/app/views/signin.ejs
+++ b/app/views/signin.ejs
@@ -30,9 +30,11 @@
 						<input type="password" class="form-control input-lg" name="password" placeholder="Password"/>
 					</div>
 					<div class="form-group">
+						<!-- This will activate the sign in process -->
 						<input type="submit" class="btn btn-primary btn-lg btn-block" value="Sign In" />
 					</div>
 					<div class="text-center">
+						<!-- This will exit the sign in process and go back to the home page -->
 						<a href="/#!/" class="btn btn-info btn-md" role="button">Cancel</a>
 					</div>
 				</form>
