--- a/app/views/signup.ejs
+++ b/app/views/signup.ejs
@@ -39,9 +39,11 @@
 							<input type="password" name="password" class="form-control input-lg" placeholder="Password"/>
 						</div>
 						<div class="form-group">
+							<!-- This will activate the signup process and create a new user -->
 							<input type="submit" class="btn btn-primary btn-lg btn-block" value="Sign up" />
 						</div>
 						<div class="text-center">
+							<!-- This will exit the signup process and go back to home page -->
 							<a href="/#!/" class="btn btn-info btn-md" role="button">Cancel</a>
 						</div>
 					</form>
