--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" href="/public/lib/bootstrap/dist/css/bootstrap.min.css">
 	
 	<div style="background-color: #668cff" class="jumbotron text-center">
-	<H1>Equipment Check-Out</H1>
+	<H1 style="color:white">Equipment Check-Out</H1>
 	</div>
 	
 	<!-- Render AngularJS views  -->
