--- a/public/example/views/example.client.view.html
+++ b/public/example/views/example.client.view.html
@@ -13,7 +13,7 @@
   -->
   
   <div data-ng-show="authentication.user">
-    <h1>Hello <span data-ng-bind="authentication.user.fullName"></span></h1>
+    <h1 style="color:#0059b3">Hello <span data-ng-bind="authentication.user.fullName"></span></h1>
     <br>
     <a href="/#!/loaners" class="btn btn-primary btn-lg" role="button">Checked-Out List</a>
     <a href="/#!/loaners/create" class="btn btn-primary btn-lg" role="button">Check-Out Item</a>
