--- a/public/loaners/views/list-loaners.client.view.html
+++ b/public/loaners/views/list-loaners.client.view.html
@@ -2,7 +2,7 @@
   <div class="text-center">
     <a href="/#!/" class="btn btn-primary btn-lg" role="button">Home</a>
     <a href="/#!/loaners/create" class="btn btn-primary btn-lg" role="button">Check-Out Item</a>
-    <h1>Issued Equipment</h1>
+    <h1 style="color:#0059b3">Issued Equipment</h1>
   </div>
   <div class="container">
     <br>
