--- a/app/views/signin.ejs
+++ b/app/views/signin.ejs
@@ -19,7 +19,7 @@
   		<div class="modal-dialog">
 		<div class="modal-content">
       		<div class="modal-header">
-        		<h1 class="text-center">Login</h1>
+        		<h1 class="text-center" style="color:#0059b3">Login</h1>
     		</div>
 	      	<div class="modal-body">
 				<form action="/signin" method="post" class="form col-md-12 center-block">
