--- a/app/views/signup.ejs
+++ b/app/views/signup.ejs
@@ -19,7 +19,7 @@
   		<div class="modal-dialog">
 		<div class="modal-content">
       		<div class="modal-header">
-        		<h1 class="text-center" >Register</h1>
+        		<h1 class="text-center" style="color:#0059b3">Register</h1>
     		</div>
       		<div class="modal-body">
 				<form action="/signup" method="post" class="form col-md-12 center-block">
