edited Mongo Schema

--- a/public/loaners/views/list-loaners.client.view.html
+++ b/public/loaners/views/list-loaners.client.view.html
@@ -21,9 +21,12 @@
         </tbody>
       </table>
   </div>  
-    
+ 
+ <div class="text-center">   
  <div data-ng-hide="!loaners || loaners.length">
-    <medium>No items checked-out.</medium><br> <a href="/#!/loaners/create" class="btn btn-primary btn-lg" role="button">Check-Out Item Here</a>
+    <h2 style="color:#0059b3">No items checked out</h2> 
+    <a href="/#!/loaners/create" class="btn btn-primary btn-lg" role="button">Check-Out Item Here</a>
+  </div>
   </div>
   
 </section>
