--- a/public/loaners/views/create-loaner.client.view.html
+++ b/public/loaners/views/create-loaner.client.view.html
@@ -12,7 +12,7 @@
                   <input type="text" class="form-control input-lg" data-ng-model="model" id="model" placeholder="Model" required>
                 </div>
                 <div class="form-group">
-                  <input type ="text" class="form-control input-lg" data-ng-model="modelType" id="modelType" placeholder="Model Type" required>
+                  <input type ="text" class="form-control input-lg" data-ng-model="serialNumber" id="serialNumber" placeholder="Serial Number" required>
                 </div>
                 <div class="form-group">
                   <input type="submit" class="btn btn-primary btn-lg btn-block" role="button">
