--- a/public/loaners/views/edit-loaner.client.view.html
+++ b/public/loaners/views/edit-loaner.client.view.html
@@ -12,7 +12,7 @@
                     <input type="text" class="form-control input-lg" data-ng-model="loaner.model" id="model" placeholder="Model" required>
                 </div>
                 <div class="form-group">
-                  <input type="text" class="form-control input-lg" data-ng-model="loaner.modelType" id="modelType" placeholder="Model Type" required>
+                  <input type="text" class="form-control input-lg" data-ng-model="loaner.serialNumber" id="serialNumber" placeholder="Serial Number" required>
                 </div>
                 <div class="form-group">
                   <input type="submit" class="btn btn-primary btn-lg btn-block" value="Update">
